Add Julkari as search engine, reformat bullet lists in 'Tietokannat'

--- a/kriteeristo.qmd
+++ b/kriteeristo.qmd
@@ -49,11 +49,13 @@ Näiden lisäksi meillä on käytössä jokaiselle haulle oma kriteeristö, @tbl
 |                |                                       |                                  |                                       |                                  |                                       |                                       |
 |                | -   Pelastusopiston julkaisut         | -   Yliopistojen julkaisukanavat | -   Pelastusopiston julkaisut         | -   Yliopistojen julkaisukanavat | -   Valto                             | -   Web of Science                    |
 |                |                                       |                                  |                                       |                                  |                                       |                                       |
-|                | -   Valto                             |                                  | -   Valto                             |                                  | -   Scopus                            | -   ProQuest                          |
+|                | -   Valto                             |                                  | -   Valto                             |                                  | -   Julkari                           | -   ProQuest                          |
 |                |                                       |                                  |                                       |                                  |                                       |                                       |
-|                | -   Scopus                            |                                  | -   Scopus                            |                                  | -   Web of Science                    | -   BASE                              |
+|                | -   Julkari                           |                                  | -   Julkari                           |                                  | -   Scopus                            | -   BASE                              |
 |                |                                       |                                  |                                       |                                  |                                       |                                       |
-|                | -   Web of Science                    |                                  | -   Web of Science                    |                                  | -   ProQuest                          | -   OpenAlex                          |
+|                | -   Scopus                            |                                  | -   Scopus                            |                                  | -   Web of Science                    | -   OpenAlex                          |
+|                |                                       |                                  |                                       |                                  |                                       |                                       |
+|                | -   Web of Science                    |                                  | -   Web of Science                    |                                  | -   ProQuest                          |                                       |
 |                |                                       |                                  |                                       |                                  |                                       |                                       |
 |                | -   ProQuest                          |                                  | -   ProQuest                          |                                  | -   BASE                              |                                       |
 |                |                                       |                                  |                                       |                                  |                                       |                                       |
