--- a/tiet-proquest.qmd
+++ b/tiet-proquest.qmd
@@ -21,6 +21,10 @@ Kirjautuessasi ProQuestiin näet ensimmäisenä perushaun (@fig-proquest-perusha
 
 Aloita vaihtamalla tietokannat. Hakumme kohdistuu Ebook Centraliin sekä Social Science Premium Collectioniin, eli muut tietokannat jätetään pois.
 
+::: callout-important
+Tee heti tässä vaiheessa ilmainen tili ProQuestiin! Ilman rekisteröitymistä et voi ladata useamman tuloksen kuin sata (Päivässä? Kuukaudessa? En ole varma...), ja ProQuest vaatii myös usein CAPTCHA-haasteen ratkaisemista ei-rekisteröityneiltä käyttäjiltä.
+:::
+
 ## Hakulausekkeen muodostaminen
 
 **Advanced Search -alueella** voidaan rakentaa hakulausekkeet kahdella eri tavalla: hakulaatikoissa tai yhtenäisenä hakulausekkeena **Command Line** -työkalun avulla (@fig-proquest-edistynythaku).
@@ -30,65 +34,43 @@ Aloita vaihtamalla tietokannat. Hakumme kohdistuu Ebook Centraliin sekä Social 
 **ProQuest noudattaa seuraavia hakusääntöjä:**
 
 -   Kaikki välimerkit ohitetaan, esim. `.`, `,` ja `:`.
-
 -   Ns. "pysäytyssanat", kuten artikkelit `a, the, an` tai välisanat `with, for, of`, ohitetaan jos niitä ei erikseen merkitä haettavaksi.
-
 -   Diakriittiset merkinnät kuten umlautit `¨`, `´` ohitetaan. Täten `å` ja `a` ovat samat symbolit, ja hakevat myös muita kuten `á` tai `â`.
-
 -   Boolelaiset sanat `AND`, `OR` ja `NOT` toimivat kuten yleensä.
-
 -   Tulkintajärjestys boolelaisille merkeille on: ensin `AND`, sitten `OR`, sitten `NOT`.
-
 -   Sekä fraasihaku että vaihtoehtoiset kirjoitusasut merkitään lainausmerkeillä `"`. Esimerkiksi `"fire fighter"` tai `"color"`.
-
     -   Vaihtoehtoisia kirjoitusasuja voi hakea myös lainausmerkkien ja aaltosulkujen yhdistelmällä `"``{}"`. Esimerkiksi `"``{color behavior}"` löytää `colour behavior`, `colour behaviour`, `color behaviour` ja `color behavior`.
-
 -   ProQuest tukee seuraavia villikortteja:
-
     -   Kysymysmerkki `?`: Korvaa nollan tai yhden merkin.
-
     -   Asteriski `*`: Korvaa 0-5 merkkiä. Huomaa lyhyempi korvausmäärä kuin muissa hakukoneissa!
-
 -   Hakua voi kohdentaa *hakukentillä*, kuten muissakin hakukoneissa. ProQuestissa voi asettaa useamman hakukentän samaan aikaan, esimerkiksi `ABSTRACT,TITLE(hakusana)` hakee sekä tiivistelmästä että otsikosta. Huomaa pilkku **ilman** välilyöntiä hakukenttien välillä! Meille tärkeät hakukentät ovat:
-
     -   `SUMMARY`: Hakee tiivistelmistä, joko tieteellisistä formaaleista tai epäformaaleista tiivistelmistä.
-
     -   `TITLE`: Hakee otsikosta.
-
     -   `NOFT`: Hakee kaikkialta **paitsi** kokotekstistä.
-
     -   `LOCATION`: Hakee maantieteellisen alueen.
-
     -   `PUBDATE`: Hakee aikarajauksella. Rajauksen voi tehdä vuotena (`YYYY`), vuosi-kuukautena (`YYYYMM`) tai vuosi-kuukausi-päivänä (`YYYYMMDD`). Rajauksen voi tehdä haarukkana käyttämällä viivaa `-`: `PUBDATE(20100101-20230930)` hakee väliltä 1.1.2010-30.9.2023.
-
     -   `PEER(yes)`: Hakee vain vertaisarvioituja julkaisuja.
 
 Esimerkkinä olen suorittanut seuraavan haun:
 
 `TIABSU(("fire rescue*" OR "fire?fighter*" OR "rescue service*" OR "emergency respon*" OR "emergency personnel" OR "medic" OR "emergency medic*" OR ambulance) AND (discriminat* OR harass* OR violen* OR "improper behavio?r" OR equali* OR equit*)) AND PEER(yes) AND PUBDATE(20100101-20230930)`
 
-Asetin myös ProQuestin palauttamaan sata tulosta per sivu.
+Asetin myös ProQuestin palauttamaan sata tulosta per sivu (@fig-proquest-commandline).
 
 ![ProQuest -palvelun Command Line -hakutoiminto. Ruudussa olen rakentanut hakulausekkeen; tätä varten voi käyttää ruudun yllä olevia Operators- ja Search fields -pudotusvalikoita. Result page options -lisävalikon alta voi asettaa näkyvyyteen liittyviä asetuksia. Koska rajoitan tulokset vertaisarvioituihin artikkeleihin hakulausekkeessa, en asettanut täppää ruudun alla olevaan Peer reviewed -kohtaan.](pics/proquest_commandline.png){#fig-proquest-commandline fig-align="center"}
 
 Hakusivulla voi jatkaa haun jalostamista. Tässä vaiheessa kannattaa heti laittaa täppä ruutuun "Show results outside my library's subscription", jotta kaikki tulokset (myös ne, joihin pääsy on vaikeampaa) tulevat mukaan. Koska tuloksia on tällä hetkellä hyvin paljon, asetan joitain lisärajoituksia sivupalkista käsin:
 
 -   **Source type** rajataan vain tieteellisiin julkaisuihin (`Scholarly Journals`).
-
-```{=html}
-<!-- -->
-```
 -   **Document type** rajataan seuraaviin: `Article`, `Case Study`, `Undefined` (jos kirjaukset ovat menneet väärin)
-
 -   **Language** rajataan vain englantiin.
-
 -   **Location** rajataan vain eurooppalaisiin maihin listauksen mukaan.
 
 ::: callout-important
-Kun teet rajauksia useasti, joskus ProQuest pelkää että olet robotti ja vaatii CAPCHA:n täyttämistä. Seuraa ohjeita ja ProQuest palauttaa sinut hakusivulle.
+Kun teet rajauksia useasti, joskus ProQuest pelkää että olet robotti ja vaatii CAPTCHA:n täyttämistä. Seuraa ohjeita ja ProQuest palauttaa sinut hakusivulle. Kirjautumalla palveluun henkilökohtaisella ilmaisella tilillä vältät CAPTCHA-haasteiden jatkuvaa täyttämistä - suosittelen!
 :::
 
-Lopputuloksina saan noin viisisataa tulosta, mikä kuulostaa jo järkevältä.
+Lopputuloksina saan noin viisisataa tulosta, mikä kuulostaa jo järkevältä (@fig-proquest-hakutulos).
 
 ![ProQuest -palvelun tuottamat hakutulokset. Olen rajannut yllä mainitut rajaukset sivupalkista.](pics/proquest_hakutulos1.png){#fig-proquest-hakutulos fig-align="center"}
 
@@ -104,7 +86,7 @@ Aloita valitsemalla kaikki tulokset sivulla hakutulosten yläpalkin täpästä. 
 
 **Content**-kohtaan, aseta "Citation & Abstract Only" (koska muita tietoa ei tarvita tässä vaiheessa). Voit myös laittaa täpän kohtaan "Deselect all items when done"; tämä auttaa seuraavien hakujen tallentamisessa. Kaikki muut asetukset voivat pysyä sellaisinaan.
 
-Vastaa mahdolliseen CAPTCHA-pyyntöön ja paina sitten **Continue**.
+Vastaa mahdolliseen CAPTCHA-pyyntöön ja paina sitten **Continue** (@fig-proquest-tallenna).
 
 ![ProQuest -palvelun tallennusnäkymä.](pics/proquest_tallenna.png){#fig-proquest-tallenna fig-align="center"}
 
@@ -117,12 +99,10 @@ Kun olet ladannut kaikki tulokset, voit sulkea ProQuestin ja siirtyä muotoilema
 **Tämäkin vaihe tulee toistaa jokaiselle ladatulle Excel-tiedostolle erikseen!**
 
 -   Avaa tulostiedosto.
-
 -   Poista kaikki sarakkeet paitsi: **Title, digitalObjectIdentifier, year**
-
 -   Varmista, että sarakkeet ovat samassa järjestyksessä kuin tulos-Excelissäsi.
 
-Voit nyt valita kaikki tulokset (vie osoitin soluun `A1` ja paina `Ctrl + oikea` valitaksesi seuraavat sarakkeet, ja sitten `Ctrl + alas` valitaksesi kaikki rivit) ja kopioida ne suoraan tulostaulukkoosi.
+Voit nyt valita kaikki tulokset (vie osoitin soluun `A1` ja paina `Ctrl + oikea` valitaksesi seuraavat sarakkeet, ja sitten `Ctrl + alas` valitaksesi kaikki rivit) ja kopioida ne suoraan tulostaulukkoosi. Muista liittää ne toiminnolla "Liitä arvot".
 
 ::: callout-important
 ProQuest tallentaa vuosiluvun tekstinä. Jos haluat muuttaa sen luvuksi, voit joutua tekemään muunnoksen jokaiselle solulle Excelissä erikseen. Helpoin tapa tehdä tämä on valita kaikki "virheelliset" solut (Excel näyttää pienen vihreän kulman sen mielestä virheellisellä solulla) ja navigoida kohtaan `Kaavat > Kaavan tarkistaminen > Virheentarkistus`. Jokaisen virheen kohdalla voit painaa `Enter`, jolloin Excel automaattisesti muuntaa tekstin luvuksi. Voit nyt hakata Enter-nappia yhtä monta sataa kertaa, kuin sinulla on rivejä...
